core/domain/src/main/java/com/example/core/domain/util/error/PasswordError.kt
package com.example.core.domain.util.error

enum class PasswordError : RootError {
    SHORT_PASSWORD,
    INVALID_PASSWORD,
}